[tool.poetry]
name = "denet-test"
version = "0.1.0"
description = ""
authors = ["timertimertimer <timerkhan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.20.0"
python-dotenv = "^1.0.1"
flask = {extras = ["async"], version = "^3.0.3"}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
